Adding djangoflash as a requirement.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ Django>=1.0.2
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/batchhttp/#egg=batchhttp
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepad/#egg=typepad
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepadapp/#egg=typepadapp
+-e git://github.com/leah/django-flash.git#egg=djangoflash
