--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 -e svn+http://oauth.googlecode.com/svn/code/python/@904#egg=oauth
-simplejson>=2.0.0
-httplib2>=0.4.0
-Django>=1.0.2
+simplejson==2.0.9
+httplib2==0.5.0
+Django==1.0.2-final
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/remoteobjects/#egg=remoteobjects
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/batchhttp/#egg=batchhttp
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepad/#egg=typepad
