--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 simplejson==2.0.9
 httplib2==0.5.0
 Django==1.0.2-final
--e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/remoteobjects/#egg=remoteobjects
+-e git://github.com/sixapart/remoteobjects#egg=remoteobjects
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/batchhttp/#egg=batchhttp
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepad/#egg=typepad
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepadapp/#egg=typepadapp
