batchhttp has moved to github Remove trailing slashes from svn checkout URLs so pip install -U will work properly

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
--e svn+http://oauth.googlecode.com/svn/code/python/@904#egg=oauth
+-e svn+http://oauth.googlecode.com/svn/code/python@904#egg=oauth
 simplejson==2.0.9
 httplib2==0.5.0
 Django==1.0.2-final
 -e git://github.com/sixapart/remoteobjects#egg=remoteobjects
--e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/batchhttp/#egg=batchhttp
--e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepad/#egg=typepad
--e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepadapp/#egg=typepadapp
+-e git://github.com/sixapart/batchhttp#egg=batchhttp
+-e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepad#egg=typepad
+-e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepadapp#egg=typepadapp
 -e git://github.com/leah/django-flash.git#egg=djangoflash
