Use github version of typepad package

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ httplib2==0.5.0
 Django==1.0.2-final
 -e git://github.com/sixapart/remoteobjects#egg=remoteobjects
 -e git://github.com/sixapart/batchhttp#egg=batchhttp
--e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepad#egg=typepad
+-e git+ssh://git@github.com/sixapart/typepad.git#egg=typepad
 -e svn+http://svn.sixapart.com/repos/typeapp/trunk/libraries/python/typepadapp#egg=typepadapp
 -e git://github.com/leah/django-flash.git#egg=djangoflash
