--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e svn+http://oauth.googlecode.com/svn/code/python@1124#egg=oauth
+oauth==1.0.1
 simplejson==2.0.9
 httplib2==0.5.0
 Django==1.0.2-final
@@ -6,4 +6,4 @@ Django==1.0.2-final
 -e git://github.com/sixapart/batchhttp#egg=batchhttp
 -e git+ssh://git@github.com/sixapart/typepad.git#egg=typepad
 -e git+ssh://git@github.com/sixapart/typepadapp.git#egg=typepadapp
--e git://github.com/leah/django-flash.git#egg=djangoflash
+-e git://github.com/danielfm/django-flash.git#egg=djangoflash
