--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ oauth==1.0.1
 simplejson==2.0.9
 httplib2==0.5.0
 Django==1.0.2-final
+django-flash==1.6.2
 -e git://github.com/sixapart/remoteobjects#egg=remoteobjects
 -e git://github.com/sixapart/batchhttp#egg=batchhttp
 -e git://github.com/sixapart/python-typepad-api.git#egg=typepad
 -e git://github.com/sixapart/typepadapp.git#egg=typepadapp
--e git://github.com/danielfm/django-flash.git#egg=djangoflash
